Diseño adaptable del menu principal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <div class="row justify-content-between align-items-center">
                 <!-- Logo y barra de busqueda  -->
-                <div class="col-2 d-flex align-items-center">
+                <div class="col col-lg-3 col-xl-2 d-flex align-items-center order-1 order-lg-1">
                     <a href="#" class="logo me-2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                             fill="currentColor" class="bi bi-bootstrap-fill" viewBox="0 0 16 16">
                             <path
@@ -24,7 +24,7 @@
                             <path
                                 d="M4.002 0a4 4 0 0 0-4 4v8a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4V4a4 4 0 0 0-4-4h-8zm1.06 12V3.545h3.399c1.587 0 2.543.809 2.543 2.11 0 .884-.65 1.675-1.483 1.816v.1c1.143.117 1.904.931 1.904 2.033 0 1.488-1.084 2.396-2.888 2.396z" />
                         </svg></a>
-                        <div class="barra-busqueda">
+                        <div class="barra-busqueda d-none d-sm-block">
                             <div class="icono">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
@@ -36,7 +36,7 @@
                 </div>
 
                 <!-- Menu  -->
-                <div class="menu col-6 text-center">
+                <div class="menu col-12 col-lg-6 col-xl-6 text-center order-3 order-lg-2">
                     <a href="#" class="active">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
                             <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>
@@ -66,7 +66,7 @@
                 </div>
 
                 <!--Botones  -->
-                <nav class="botones col-2 text-end d-flex align-items-center justify-content-end">
+                <nav class="botones col-auto col-lg-3 col-xl-2 text-end d-flex align-items-center justify-content-end order-2 order-lg-3">
                     <a href="#" class="perfil">
                         <img src="./img/persona2.jpg" alt=""> Carlos
                     </a>
