--- a/index.html
+++ b/index.html
@@ -158,6 +158,37 @@
                     </nav>
                 </footer>
             </aside>
+
+            <main class="col-6"></main>
+
+            <aside class="contactos col-3 col-xl-2">
+                <div class="seccion">
+                    <h3 class="titulo">Publicidad</h3>
+                    <div class="publicidad">
+                        <a href="#"><img src="./img/ad1.jpg" alt=""></a>
+                    </div>
+                    <div class="publicidad">
+                        <a href="#"><img src="./img/ad2.jpg" alt=""></a>
+                    </div>
+                </div>
+                <div class="seccion">
+                    <h3 class="titulo">Contactos</h3>
+                    <nav>
+                        <a href="#" class="perfil">
+                            <img src="./img/persona1.jpg" alt="">Persona 1
+                        </a>
+                        <a href="#" class="perfil">
+                            <img src="./img/persona3.jpg" alt="">Persona 3
+                        </a>
+                        <a href="#" class="perfil">
+                            <img src="./img/persona4.jpg" alt="">Persona 4
+                        </a>
+                        <a href="#" class="perfil">
+                            <img src="./img/persona5.jpg" alt="">Persona 5
+                        </a>
+                    </nav>
+                </div>
+            </aside>
         </div>
     </div>
 
